--- a/main.html
+++ b/main.html
@@ -8,6 +8,12 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="container">
+		<div class=item> item1 </div>
+		<div class=item> item2 </div>
+		<div class=item> item3 </div>
+		<div class=item> item4 </div>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
