--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div class="container">
+	<div class="holder">
 		<div class=item> item1 </div>
 		<div class=item> item2 </div>
 		<div class=item> item3 </div>
