--- a/main.html
+++ b/main.html
@@ -9,10 +9,10 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div class="holder">
-		<div class=item> item1 </div>
-		<div class=item> item2 </div>
-		<div class=item> item3 </div>
-		<div class=item> item4 </div>
+		<div class=item>  </div>
+		<div class=item> </div>
+		<div class=item> </div>
+		<div class=item>  </div>
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
