--- a/main.html
+++ b/main.html
@@ -3,8 +3,10 @@
 <html>
 
 <head>
+	<title>Place-the-item</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
+	
 
 <body>
 	<!-- the entire body must be written by student -->
