--- a/main.html
+++ b/main.html
@@ -5,16 +5,16 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-	
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div class="holder">
-		
-	</div>
+  <div class="holder">
+	  
+  </div>
     <script type="text/javascript" src="./script.js">
 </script>
-
 </body>
+
+</html>
 
 </html>
