--- a/main.html
+++ b/main.html
@@ -8,13 +8,15 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-  <div class="holder">
-	  
-  </div>
+	<div class="holder">
+		<div id="box"></div>
+		<div id="box"></div>
+		<div id="box"></div>
+		<div id="box"></div>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
-</body>
 
-</html>
+</body>
 
 </html>
